<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/round_background"
    >

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="314dp"
        android:layout_height="61dp"
        android:layout_marginTop="56dp"
        android:textColor="@color/black"
        android:ems="15"
        android:inputType="text"
        android:paddingStart="20dp"
        android:hint="Name of event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="309dp"
        android:layout_height="106dp"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:hint="Event Description"
        android:paddingStart="20dp"

        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />


    <ImageView
        android:id="@+id/timepiceker"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginEnd="48dp"

        app:layout_constraintBottom_toBottomOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintTop_toTopOf="@+id/editTextText"
        app:layout_constraintVertical_bias="0.437"
        app:srcCompat="@drawable/baseline_access_time_24"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/datepicker"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.52"
        app:srcCompat="@drawable/baseline_calendar_month_24" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="346dp"
        android:layout_height="95dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword">


        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:gravity="top|end"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/Chill"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/radioButton2"
            app:layout_constraintHorizontal_bias="0.276"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:textColor="@color/black"
            android:gravity="top|end"
            android:padding="10dp"
            android:text="@string/Mandatory"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:gravity="top|end"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/Important"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/radioButton5"
            app:layout_constraintHorizontal_bias="0.382"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>

